# PQCMIGRATOR

./: README.md  pyproject.toml  requirements.txt
src/pqcmigrator/: crew.py  main.py
src/pqcmigrator/config/: agents.yaml  tasks.yaml  tools.yaml
src/pqcmigrator/tools/: __init__.py  custom_tool.py
src/pqcmigrator/tools/scanner_agent/: CODE_tool.py  SSH_tool.py  TLS_tool.py  YARA_tool.py
